--- a/web3_tp_final/web3_tp_final/Views/Accueil/Accueil.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Accueil/Accueil.cshtml
@@ -44,7 +44,7 @@
 
                 </div>
                 <div>
-                    <img src="~/images/chienchat.jpg" class="img-size"/>
+                    <img src="~/images/chienchat.jpg" class="img-size padding-image-accueil"/>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="split">
                 <div>
-                    <img src="~/images/grenouilleordi.jpg" class="img-size" />
+                    <img src="~/images/grenouilleordi.jpg" class="img-size padding-image-accueil" />
 
                 </div>
                 <div>
@@ -74,7 +74,7 @@
 
                 </div>
                 <div>
-                    <img src="~/images/chienordi.jpg" class="img-size" />
+                    <img src="~/images/chienordi.jpg" class="img-size padding-image-accueil" />
 
 
                 </div>
