--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -58,13 +58,17 @@ h2,
 h3,
 p {
     margin: 0;
+   
 }
+
+
 
 body {
     font-family: backslash;
     font-weight: 400;
     font-size: 1.313rem;
-    line-height:1.6;
+    line-height: 1.6;
+    
 }
 
 
@@ -97,6 +101,7 @@ header {
     padding: 1rem 0;
 }
 
+
 .container {
     margin-inline: auto;
     width: min(90%, 70.5rem);
@@ -105,6 +110,11 @@ header {
 .split {
     display:flex;
     flex-direction: column;
+}
+
+.jumbotron {
+    background-image: url("../images/doglogo.png");
+    background-size: cover;
 }
 
 @media(min-width: 60em) {
@@ -119,15 +129,6 @@ header {
         margin-left: 2em;
     }
 
-    section {
-        padding: 7rem 0 7rem;
-    }
-
-    header {
-        padding: 1rem 0;
-    }
-
-    
 }
 
 
@@ -157,10 +158,11 @@ header {
     color: var(--clr-primary-200);
 }
 
-/*.img-size {
-    height:35%;
-    width:35%;
-}*/
+.bg-neutral-100 {
+    background-color: var(--clr-neutral-100);
+}
+
+
 
 .bg-primary-400 h2 {
     color: var(--clr-neutral-100)
@@ -177,5 +179,9 @@ header {
 
 .section-footer {
     padding: 1.40rem 0;
+}
+
+.padding-image-accueil {
+    padding: 2rem 0;
 }
 
