--- a/web3_tp_final/web3_tp_final/Views/Availabilities/Availabilities.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Availabilities/Availabilities.cshtml
@@ -9,7 +9,7 @@
 
     <title>Disponibilites</title>
 </head>
-<body>
+<!-->body>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1.js/js/bootstrap.min.js" />
@@ -21,5 +21,5 @@
             <h3>Date Fin:</h3>
         </div>
     </section>
-</body>
+</body-->
 </html>
