suite du navbar inscription

--- a/web3_tp_final/web3_tp_final/wwwroot/css/SignUp/SignUp.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/SignUp/SignUp.css
@@ -629,6 +629,8 @@ p {
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
         line-height: 1.625rem;
+        width: 25px;
+        height: 40px;
     }
 
     .navbar .navbar-toggler {
