--- a/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
@@ -31,16 +31,13 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">One more separated link</a>
             </div>
-        </div>
-        <div class="navbar-translate">
-            <a class="navbar-brand" href="https://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="" data-placement="bottom" target="_blank" data-original-title="Designed by Invision. Coded by Creative Tim">
-                Now Ui Kit
-            </a>
-            <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-bar top-bar"></span>
-                <span class="navbar-toggler-bar middle-bar"></span>
-                <span class="navbar-toggler-bar bottom-bar"></span>
-            </button>
+        </div>        
+        <div class="collapse navbar-collapse justify-content-lg-start" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg"> 
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Home" asp-action="Index" asp-route-id="">Home</a>                
+                </li>
+            </ul>
         </div>
         <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
             <ul class="navbar-nav">
