--- a/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
@@ -31,11 +31,11 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">One more separated link</a>
             </div>
-        </div>        
-        <div class="collapse navbar-collapse justify-content-lg-start" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg"> 
+        </div>
+        <div class="collapse navbar-collapse justify-content-lg-start" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" asp-action="Index" asp-route-id="">Home</a>                
+                    <a class="nav-link" asp-controller="Home" asp-action="Index" asp-route-id="">Home</a>
                 </li>
             </ul>
         </div>
@@ -73,7 +73,9 @@
     <div class="container">
         <div class="row">
             <div class="card card-signup" data-background-color="brown">
-                <form class="form" method="" action="">
+                <form class="form" asp-action="Create" method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
                     <div class="card-header text-center">
                         <h3 class="card-title title-up">Sign Up</h3>
                         <div class="social-line">
@@ -95,8 +97,9 @@
                                     <i class="now-ui-icons users_circle-08"></i>
                                 </span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Username...">
+                            <input asp-for="UserName" class="form-control" placeholder="Username...">
                         </div>
+                        <span asp-validation-for="UserName" class="text-danger"></span>
                         <div class="input-group no-border">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
@@ -124,6 +127,9 @@
                     </div>
                     <div class="card-footer text-center">
                         <a href="#pablo" class="btn btn-neutral btn-round btn-lg">Get Started</a>
+                    </div>
+                    <div class="card-footer text-center">
+                        <input type="submit" value="Create" class="btn btn-neutral btn-round btn-lg" />
                     </div>
                 </form>
             </div>
