--- a/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
@@ -12,6 +12,14 @@
 
 </head>
 <body>
+    <div>
+        Liens temporaires
+        <ul class="list-unstyled">
+            <li><a asp-controller="Pet" asp-action="Index">PetController</a></li>
+            <li><a asp-area="" asp-controller="Home" asp-action="GenerateMockUsers">Generate mock users</a></li>
+        </ul>
+    </div>
+
     <header class="text-center">
         <div class="container">
             <p class="p-header"> Simplifiez-vous la vie</p>
@@ -78,8 +86,6 @@
                 </div>
                 <div>
                     <img src="~/images/chienordi.jpg" class="img-size padding-image-accueil" />
-
-
                 </div>
             </div>
         </div>
