--- a/web3_tp_final/web3_tp_final/Views/Login/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Login/Index.cshtml
@@ -75,7 +75,7 @@
             <div class="card card-signup" data-background-color="brown">
                 <form class="form" method="" action="">
                     <div class="card-header text-center">
-                        <h3 class="card-title title-up">Sign Up</h3>
+                        <h3 class="card-title title-up">Log in</h3>
                         <div class="social-line">
                             <a href="#pablo" class="btn btn-neutral btn-facebook btn-icon btn-round">
                                 <i class="fab fa-facebook-square"></i>
