--- a/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
@@ -4,18 +4,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="~/css/mystyle.css" />
     <title>Accueil</title>
-
 </head>
 <body>
     <div>
         Liens temporaires
         <ul class="list-unstyled">
-            <li><a asp-controller="Pet" asp-action="Index">PetController</a></li>
+            <li><a asp-controller="Pets" asp-action="Index">PetsController</a></li>
             <li><a asp-area="" asp-controller="Home" asp-action="GenerateMockUsers">Generate mock users</a></li>
         </ul>
     </div>
