ajout de la validation dans le html, manque juste à le rendre dynamique

--- a/web3_tp_final/web3_tp_final/wwwroot/css/SignUp/SignUp.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/SignUp/SignUp.css
@@ -220,6 +220,14 @@ body {
     color: #dd4b39 !important;
 }
 
+.text-danger[data-color="caramel"] {
+    color: #e09650 !important;
+}
+
+.card[data-background-color="brown"] {
+    background-color: rgba(107, 59, 43, 0.9);
+}
+
 .form-control::-moz-placeholder {
     color: #888888;
     opacity: 0.8;
