--- a/web3_tp_final/web3_tp_final/Views/Pets/Create.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Create.cshtml
@@ -48,6 +48,22 @@
 </div>
 
 <div>
+    <form method="post" enctype="multipart/form-data" asp-controller="Pets" asp-action="UploadPhoto">
+        <div class="form-group">
+            <div class="col-md-10">
+                <p>Upload one or more files using this form:</p>
+                <input type="file" name="files" multiple />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-10">
+                <input type="submit" value="Upload" />
+            </div>
+        </div>
+    </form>
+</div>
+
+<div>
     <a asp-action="Index">Back to List</a>
 </div>
 
