Ajout du css dans l'appli chat de base.

--- a/web3_tp_final/Chat Sit-A-Pup/Pages/Shared/_Layout.cshtml
+++ b/web3_tp_final/Chat Sit-A-Pup/Pages/Shared/_Layout.cshtml
@@ -3,15 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Chat_Sit_A_Pup</title>
+    <title>@ViewData["Title"]Chat</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/mystyle.css" />
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Chat_Sit_A_Pup</a>
+                <a style="text-decoration:none;" asp-area="" asp-controller="Home" asp-action="Index"><img class="navbar-brand" src="~/images/happy.png" /><h1>Sit-A-Pup</h1></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
