--- a/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
@@ -70,73 +70,75 @@
             </div>
         </div>
     </nav>
-    <div class="section section-signup" style="background-image: url('https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=%5B820%2C706%5D&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F06%2F01%2Fdogs-at-dog-park-107903002-2000.jpg'); background-size: cover; background-position: top center; min-height: 100vh;">
-        <div class="container">
-            <div class="row">
-                <div class="card card-signup" data-background-color="brown">
-                    <form class="form" asp-action="Create">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div style="background-image: url('https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=%5B820%2C706%5D&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F06%2F01%2Fdogs-at-dog-park-107903002-2000.jpg'); background-size: cover; background-position: top center; min-height: 100vh;">
+        <div class="section section-signup blur">
+                <div class="container">
+                    <div class="row">
+                        <div class="card card-signup" data-background-color="brown">
+                            <form class="form" asp-action="Create">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                        <div class="card-header text-center">
-                            <h3 class="card-title title-up">Sign Up</h3>
-                            <div class="social-line">
-                                <a href="#pablo" class="btn btn-neutral btn-facebook btn-icon btn-round">
-                                    <i class="fab fa-facebook-square"></i>
-                                </a>
-                                <a href="#pablo" class="btn btn-neutral btn-twitter btn-icon btn-lg btn-round">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#pablo" class="btn btn-neutral btn-google btn-icon btn-round">
-                                    <i class="fab fa-google-plus"></i>
-                                </a>
-                            </div>
+                                <div class="card-header text-center">
+                                    <h3 class="card-title title-up">Sign Up</h3>
+                                    <div class="social-line">
+                                        <a href="#pablo" class="btn btn-neutral btn-facebook btn-icon btn-round">
+                                            <i class="fab fa-facebook-square"></i>
+                                        </a>
+                                        <a href="#pablo" class="btn btn-neutral btn-twitter btn-icon btn-lg btn-round">
+                                            <i class="fab fa-twitter"></i>
+                                        </a>
+                                        <a href="#pablo" class="btn btn-neutral btn-google btn-icon btn-round">
+                                            <i class="fab fa-google-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <div class="input-group no-border">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="now-ui-icons users_circle-08"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="UserName" class="form-control" placeholder="Username...">
+                                    </div>
+                                    <span asp-validation-for="UserName" class="text-danger" data-color="caramel"></span>
+                                    <div class="input-group no-border">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="now-ui-icons ui-1_email-85"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="Email" class="form-control" placeholder="Email...">
+                                    </div>
+                                    <span asp-validation-for="Email" class="text-danger" data-color="caramel"></span>
+                                    <div class="input-group no-border">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="now-ui-icons tech_mobile"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number...">
+                                    </div>
+                                    <span asp-validation-for="PhoneNumber" class="text-danger" data-color="caramel"></span>
+                                    <div class="input-group no-border">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="now-ui-icons ui-1_email-85"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="Address" class="form-control" placeholder="Address...">
+                                    </div>
+                                    <span asp-validation-for="Address" class="text-danger" data-color="caramel"></span>
+                                </div>
+                                <div class="card-footer text-center">
+                                    <input type="submit" value="Create" class="btn btn-neutral btn-round btn-lg" />
+                                </div>
+                            </form>
                         </div>
-                        <div class="card-body">
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons users_circle-08"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="UserName" class="form-control" placeholder="Username...">
-                            </div>
-                            <span asp-validation-for="UserName" class="text-danger" data-color="caramel"></span>
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons ui-1_email-85"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="Email" class="form-control" placeholder="Email...">
-                            </div>
-                            <span asp-validation-for="Email" class="text-danger" data-color="caramel"></span>
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons tech_mobile"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number...">
-                            </div>
-                            <span asp-validation-for="PhoneNumber" class="text-danger" data-color="caramel"></span>
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons ui-1_email-85"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="Address" class="form-control" placeholder="Address...">
-                            </div>
-                            <span asp-validation-for="Address" class="text-danger" data-color="caramel"></span>
-                        </div>
-                        <div class="card-footer text-center">
-                            <input type="submit" value="Create" class="btn btn-neutral btn-round btn-lg" />
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     <footer class="footer">
         <div class="container">
             <nav>
