Ajout photo fonctionnel

--- a/web3_tp_final/web3_tp_final/Views/Pets/Create.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -36,26 +36,14 @@
                 <span asp-validation-for="BirthYear" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Photo"></label>
+                <input type="file" id="photo" name="photo" multiple="multiple" />
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <form method="post" enctype="multipart/form-data" asp-controller="Pets" asp-action="UploadPhoto">
-        <div class="form-group">
-            <div class="col-md-10">
-                <p>Upload one or more files using this form:</p>
-                <input type="file" name="files" multiple />
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-10">
-                <input type="submit" value="Upload" />
-            </div>
-        </div>
-    </form>
 </div>
 
 <div>
