--- a/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
@@ -10,7 +10,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
     <!------ Include the above in your HEAD tag ---------->
-
+    <h1>
+        Test
+        @ViewBag.state
+    </h1>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
