--- a/web3_tp_final/web3_tp_final/Views/Pets/Create.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Create.cshtml
@@ -37,7 +37,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Photo"></label>
-                <input type="file" id="photo" name="photo" multiple="multiple" />
+                <input type="file" id="photo" name="photo"/>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
