--- a/web3_tp_final/web3_tp_final/Views/Home/Privacy.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Home/Privacy.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
+@{ Layout = "_Navbar-default";}
+
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
