--- a/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/SignUp.cshtml
@@ -1,87 +1,170 @@
-@model web3_tp_final.Models.User
+﻿@model web3_tp_final.Models.User
 
 @{ ViewData["Title"] = "Create"; }
-@{ Layout = "_Navbar-default";}
+@{ Layout = null;}
 
-<div style="background-image: url('https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=%5B820%2C706%5D&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F06%2F01%2Fdogs-at-dog-park-107903002-2000.jpg'); background-size: cover; background-position: top center; min-height: 100vh;">
-    <div class="section section-signup blur">
+<head>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="~/css/SignUp/SignUp.css" />
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
+    <!------ Include the above in your HEAD tag ---------->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+    <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container">
-            <div class="row">
-                <div class="card card-signup" data-background-color="brown">
-                    <form class="form" asp-action="Create">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="dropdown button-dropdown">
+                <a href="#pablo" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">
+                    <span class="button-bar"></span>
+                    <span class="button-bar"></span>
+                    <span class="button-bar"></span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-header">Dropdown header</a>
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Separated link</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">One more separated link</a>
+                </div>
+            </div>
+            <div class="collapse navbar-collapse justify-content-lg-start" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Index" asp-route-id="">Home</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Users" asp-action="Details" asp-route-id="">Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/creativetimofficial/now-ui-kit/issues">Have an issue?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
+                            <i class="fab fa-twitter"></i>
+                            <p class="d-lg-none d-xl-none">Twitter</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
+                            <i class="fab fa-facebook-square"></i>
+                            <p class="d-lg-none d-xl-none">Facebook</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram">
+                            <i class="fab fa-instagram"></i>
+                            <p class="d-lg-none d-xl-none">Instagram</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div style="background-image: url('https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=%5B820%2C706%5D&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F06%2F01%2Fdogs-at-dog-park-107903002-2000.jpg'); background-size: cover; background-position: top center; min-height: 100vh;">
+        <div class="section section-signup blur">
+                <div class="container">
+                    <div class="row">
+                        <div class="card card-signup" data-background-color="brown">
+                            <form class="form" asp-action="Create">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                        <div class="card-header text-center">
-                            <h3 class="card-title title-up">Sign Up</h3>
-                            <div class="social-line">
-                                <a href="#pablo" class="btn btn-neutral btn-facebook btn-icon btn-round">
-                                    <i class="fab fa-facebook-square"></i>
-                                </a>
-                                <a href="#pablo" class="btn btn-neutral btn-twitter btn-icon btn-lg btn-round">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#pablo" class="btn btn-neutral btn-google btn-icon btn-round">
-                                    <i class="fab fa-google-plus"></i>
-                                </a>
-                            </div>
+                                <div class="card-header text-center">
+                                    <h3 class="card-title title-up">Sign Up</h3>
+                                    <div class="social-line">
+                                        <a href="#pablo" class="btn btn-neutral btn-facebook btn-icon btn-round">
+                                            <i class="fab fa-facebook-square"></i>
+                                        </a>
+                                        <a href="#pablo" class="btn btn-neutral btn-twitter btn-icon btn-lg btn-round">
+                                            <i class="fab fa-twitter"></i>
+                                        </a>
+                                        <a href="#pablo" class="btn btn-neutral btn-google btn-icon btn-round">
+                                            <i class="fab fa-google-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <div class="input-group no-border">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="now-ui-icons users_circle-08"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="UserName" class="form-control" placeholder="Username...">
+                                    </div>
+                                    <span asp-validation-for="UserName" class="text-danger" data-color="caramel"></span>
+                                    <div class="input-group no-border">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="now-ui-icons ui-1_email-85"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="Email" class="form-control" placeholder="Email...">
+                                    </div>
+                                    <span asp-validation-for="Email" class="text-danger" data-color="caramel"></span>
+                                    <div class="input-group no-border">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="now-ui-icons tech_mobile"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number...">
+                                    </div>
+                                    <span asp-validation-for="PhoneNumber" class="text-danger" data-color="caramel"></span>
+                                    <div class="input-group no-border">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="now-ui-icons ui-1_email-85"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="Address" class="form-control" placeholder="Address...">
+                                    </div>
+                                    <span asp-validation-for="Address" class="text-danger" data-color="caramel"></span>
+                                </div>
+                                <div class="card-footer text-center">
+                                    <input type="submit" value="Create" class="btn btn-neutral btn-round btn-lg" />
+                                </div>
+                            </form>
                         </div>
-                        <div class="card-body">
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons users_circle-08"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="UserName" class="form-control" placeholder="Username...">
-                            </div>
-                            <span asp-validation-for="UserName" class="text-danger" data-color="caramel"></span>
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons ui-1_lock-circle-open"></i>
-                                    </span>
-                                </div>
-                                <input type="password" asp-for="Password" class="form-control" placeholder="Password...">
-                            </div>
-                            <span asp-validation-for="Password" class="text-danger" data-color="caramel"></span>
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons ui-1_email-85"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="Email" class="form-control" placeholder="Email...">
-                            </div>
-                            <span asp-validation-for="Email" class="text-danger" data-color="caramel"></span>
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons tech_mobile"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number...">
-                            </div>
-                            <span asp-validation-for="PhoneNumber" class="text-danger" data-color="caramel"></span>
-                            <div class="input-group no-border">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="now-ui-icons ui-1_email-85"></i>
-                                    </span>
-                                </div>
-                                <input asp-for="Address" class="form-control" placeholder="Address...">
-                            </div>
-                            <span asp-validation-for="Address" class="text-danger" data-color="caramel"></span>
-                        </div>
-                        <div class="card-footer text-center">
-                            <input type="submit" value="Create" class="btn btn-neutral btn-round btn-lg" />
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    <footer class="footer">
+        <div class="container">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://www.creative-tim.com">
+                            Creative Tim
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://presentation.creative-tim.com">
+                            About Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://blog.creative-tim.com">
+                            Blog
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="copyright" id="copyright">
+                <p class="mb-0">Made with <a href="https://demos.creative-tim.com/now-ui-kit/index.html" target="_blank">Now UI Kit</a> by Creative Tim</p>
+            </div>
+        </div>
+    </footer>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
