--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Utilisateurs</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Pets" asp-action="Index">Mes animaux</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Chat" asp-action="Index">Chat</a>
                         </li>
                     </ul>
