--- a/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
@@ -4,11 +4,42 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div>
+    <div class="d-flex justify-content-center">
+        <h1>Mes animaux</h1>
+    </div>
+    <div class="d-flex justify-content-end">
+        <a asp-action="Create">Inscrire!</a>
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="~/images/dogs_playing.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="~/images/dogs_playing.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            One of three columns
+        </div>
+    </div>
+</div>
 <table class="table">
     <thead>
         <tr>
@@ -37,35 +68,36 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Specie)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BirthYear)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsBeingSitted)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sitter)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SittingStart)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SittingEnd)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PetID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PetID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PetID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Specie)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BirthYear)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsBeingSitted)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sitter)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SittingStart)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SittingEnd)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.PetID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.PetID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.PetID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
