--- a/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<div>
-    <div class="d-flex justify-content-center">
-        <h1>Mes animaux</h1>
-    </div>
+<div class="d-flex justify-content-center m-3">
+    <h1>Mes animaux</h1>
 </div>
 
 <div class="container">
@@ -59,13 +57,14 @@
         }
         else
         {
-            <div class="d-flex justify-content-center jumbotron">
-                <p>Aucun animal inscrit!</p>
+            <div class="d-flex justify-content-center jumbotron m-4">
+                <p>Aucun animal inscrit.</p>
             </div>
         }
     }
 </div>
 
-<div class="d-flex justify-content-center jumbotron">
-    <a asp-action="Create">Inscrire!</a>
+<div class="h4 text-center m-4">
+    <i class="fas fa-paw"></i>
+    <a asp-action="Create">Inscrire</a>
 </div>
