--- a/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
         Liens temporaires
         <ul class="list-unstyled">
             <li><a asp-area="" asp-controller="Home" asp-action="GenerateMockData">Generate mock data</a></li>
+            <li><a asp-area="" asp-controller="Users" asp-action="Index">All users</a></li>
             <li>User session: @username</li>
             @{ for (int i = 1; i < 5; i++)
                 {
