--- a/web3_tp_final/web3_tp_final/Views/Shared/_Navbar-default.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Navbar-default.cshtml
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="dropdown button-dropdown">
                     <a href="#pablo" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">
                         <span class="button-bar"></span>
@@ -49,6 +49,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Chat" asp-action="Index">Chat</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="/Users/1/Appointments">My Appointments</a>
                         </li>
                     </ul>
                 </div>
