--- a/web3_tp_final/web3_tp_final/Views/Shared/_Navbar-default.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Navbar-default.cshtml
@@ -42,7 +42,7 @@
                             <a class="nav-link" asp-controller="Home" asp-action="Index" asp-route-id="">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="FindSitter">Trouver un gardien</a>
+                            <a class="nav-link" asp-area="" asp-controller="FindSitter" asp-action="Index">Trouver un gardien</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="BecomeSitter">Devenir gardien</a>
