--- a/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
@@ -39,12 +39,14 @@
                 </div>
             </div>
         </div>
-
-        <div class="col-md-6">
-            <a asp-controller="FindSitter" asp-route-id="@Model.UserID" asp-action="BookAppointment" class="btn btn-primary fa-pull-right">
-                Book an appointment
-            </a>
-        </div>
+        @if (ViewBag.CurrentID != null && ViewBag.CurrentID != Model.UserID)
+        {
+            <div class="col-md-6">
+                <a asp-controller="FindSitter" asp-route-id="@Model.UserID" asp-action="BookAppointment" class="btn btn-primary fa-pull-right">
+                    Book an appointment
+                </a>
+            </div>
+        }
     </div>
 </div>
 
